--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     min-width: 250px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #000;
   }
   
   /* Include the padding and border in an element's total width and height */
@@ -109,4 +110,18 @@ body {
   
   .addBtn:hover {
     background-color: #bbb;
+  }
+
+  .box span:hover{
+    transition: all 0.5s ease;
+    background-color: #000;
+    border: 1px solid #fff;
+    color: #fff;
+
+  }
+  .box span{
+    border: 1px solid black;
+    background-color: #fff;
+    font-size: 18px;
+    font-weight: 600;
   }
