--- a/style.css
+++ b/style.css
@@ -22,36 +22,23 @@ body {
     position: relative;
     padding: 12px 8px 12px 40px;
     list-style-type: none;
-    background: #eee;
     font-size: 18px;
     transition: 0.2s;
-    
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
   }
   
-  /* Set all odd list items to a different color (zebra-stripes) */
-  ul li:nth-child(odd) {
-    background: #f9f9f9;
-  }
+
   
   
-  ul li.checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
+
   
 
   li{
     width: 50%;
     background-color: #000;
-    border: 1px solid rgba(128, 128, 128, 0.561);
+    border: 1px solid  aqua;
     border-radius:  5px;
     margin-bottom: 10px;
+    color: aqua;
   }
   /* Style the close button */
   .close {
@@ -92,6 +79,7 @@ body {
     padding: 10px;
     float: left;
     font-size: 16px;
+    
   }
   
   /* Style the "Add" button */
